Updated as per BRG college

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -35,7 +35,7 @@ navbar:
 
   middle:
     trustee: ABS TRUSTEE'S
-    college-name: FOO COLLEGE OF ENGINEERING
+    college-name: BRG COLLEGE OF ENGINEERING
     affiliation: Affiliated to XYZ University
     accreditation: PQR Accredited "A"
     action-btn:
